melding into one core module